// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer/> render with default/required props 1`] = `
<DocumentFragment>
  <div
    class="drawer_overlay"
  >
    <aside
      class="drawer--open"
      data-cy="--drawer"
      style="transition-duration: 0.25s;"
    >
      <header
        class="drawer_head"
      >
        <button
          class="drawer_button--close"
          data-cy="--drawer--close"
        >
          ×
        </button>
      </header>
      <section
        class="drawer_content"
      >
        <div
          data-cy="drawer-child"
        />
      </section>
    </aside>
  </div>
</DocumentFragment>
`;

exports[`<Drawer/> render with optional/required props 1`] = `
<DocumentFragment>
  <div
    class="drawer_overlay"
  >
    <aside
      class="optionalProps.className drawer--open"
      data-cy="optionalProps.data-cy--drawer"
      style="transition-duration: 0.25s;"
    >
      <header
        class="drawer_head"
      >
        <button
          class="drawer_button--close"
          data-cy="optionalProps.data-cy--drawer--close"
        >
          ×
        </button>
      </header>
      <section
        class="drawer_content"
      >
        <div
          data-cy="drawer-child"
        />
      </section>
    </aside>
  </div>
</DocumentFragment>
`;
